--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             onclick="location.href='https://github.com/nikhil2003-hub'"
           />
         </div>
-      </div>
+      
     </section>
     <section id="about">
       <p class="section__text__p1">Get To Know More</p>
@@ -76,8 +76,8 @@
                 alt="Experience icon"
                 class="icon"
               />
-              <h3>Experience</h3>
-              <p>STUDENT</p>
+              
+              <h3>STUDENT</h3>
             </div>
             <div class="details-container">
               <img
