--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
             solve real-world problems. Eager to contribute to team success through hard work, creativity, and strong
             problem-solving abilities. Currently seeking a software internship to gain hands-on experience and further
             develop my skills in a professional environment.</p>
+        <p>My interests include web development, cybersecurity, and artificial intelligence. I enjoy working on projects that challenge my skills and allow me to learn new technologies.</p>
+        <p>In my free time, I love exploring new programming languages, contributing to open-source projects, and staying updated with the latest trends in technology.</p>
     </section>
     <section id="education">
         <h2>Education</h2>
@@ -55,16 +57,59 @@
         </ul>
     </section>
     <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>OOPS in Java</li>
-            <li>Python</li>
-            <li>C Language</li>
-            <li>Java Script</li>
-        </ul>
-    </section>
+    <h2>Skills</h2>
+    
+    <!-- Technical Skills with Progress Bars -->
+    <div class="skill">
+    <span>HTML</span>
+    <div class="skill-bar">
+    <div class="skill-progress" style="width: 90%"></div>
+    </div>
+</div>
+
+<div class="skill">
+    <span>CSS</span>
+    <div class="skill-bar">
+    <div class="skill-progress" style="width: 85%"></div>
+    </div>
+</div>
+
+<div class="skill">
+    <span>JavaScript</span>
+    <div class="skill-bar">
+    <div class="skill-progress" style="width: 75%"></div>
+    </div>
+</div>
+
+<div class="skill">
+    <span>Python</span>
+    <div class="skill-bar">
+    <div class="skill-progress" style="width: 80%"></div>
+    </div>
+</div>
+
+<div class="skill">
+    <span>Object Oriented Programming in Java</span>
+    <div class="skill-bar">
+    <div class="skill-progress" style="width: 80%"></div>
+    </div>
+</div>
+
+<div class="skill">
+    <span>React</span>
+    <div class="skill-bar">
+    <div class="skill-progress" style="width: 70%"></div>
+    </div>
+</div>
+
+<!-- Core Concepts -->
+<h3 style="margin-top: 2rem; color: #00ffe7; text-shadow: 0 0 6px #00ffe7;">Core Concepts</h3>
+<ul style="list-style: none; padding: 0; margin: 1rem 0 0 0;">
+    <li style="margin-bottom: 0.5rem;"><i class="fas fa-check-circle" style="color: #00ffe7; margin-right: 8px;"></i>Data Structures and Algorithms</li>
+    <li style="margin-bottom: 0.5rem;"><i class="fas fa-check-circle" style="color: #00ffe7; margin-right: 8px;"></i>Operating Systems</li>
+    <li><i class="fas fa-check-circle" style="color: #00ffe7; margin-right: 8px;"></i>Computer Networks</li>
+</ul>
+</section>
 
     <section id="projects">
         <h2>Projects</h2>
@@ -83,6 +128,7 @@
             <li>
                 <strong>Technical Team Member in Hackops Gitam</strong>
                 <p>Active member of a dedicated cybersecurity team committed to continuous learning, knowledge sharing, and professional growth in the field of Information Security, with a focus on practical skills development, collaboration, and staying updated on emerging threats and technologies.</p>
+                <section id="experience" class="scroll-reveal">
         </ul>
 
     <section id="certifications">
