--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#certifications">Certifications</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="#resume">Resume</a></li>
             </ul>
         </nav>
     </header>
@@ -29,7 +30,6 @@
         <h3 style="color: #e0e0e0; font-weight: 400; font-size: 1.5rem;">Software Developer & Web Developer</h3>
         <h4 style="color: #e0e0e0; font-weight: 200; font-size: 1.1rem;">Computer Science Engineering @ GITAM University</h4>
     </section>
-    
 
     <section id="home">
         <h2>Welcome!</h2>
@@ -47,6 +47,7 @@
         <p>My interests include web development, cybersecurity, and artificial intelligence. I enjoy working on projects that challenge my skills and allow me to learn new technologies.</p>
         <p>In my free time, I love exploring new programming languages, contributing to open-source projects, and staying updated with the latest trends in technology.</p>
     </section>
+
     <section id="education">
         <h2>Education</h2>
         <ul>
@@ -56,68 +57,85 @@
             </li>
         </ul>
     </section>
+
     <section id="skills">
-    <h2>Skills</h2>
-    
-    <!-- Technical Skills with Progress Bars -->
-    <div class="skill">
-    <span>HTML</span>
-    <div class="skill-bar">
-    <div class="skill-progress" style="width: 90%"></div>
-    </div>
-</div>
+        <h2>Skills</h2>
 
-<div class="skill">
-    <span>CSS</span>
-    <div class="skill-bar">
-    <div class="skill-progress" style="width: 85%"></div>
-    </div>
-</div>
+        <div class="skill">
+            <span>HTML</span>
+            <div class="skill-bar">
+                <div class="skill-progress" style="width: 90%"></div>
+            </div>
+        </div>
 
-<div class="skill">
-    <span>JavaScript</span>
-    <div class="skill-bar">
-    <div class="skill-progress" style="width: 75%"></div>
-    </div>
-</div>
+        <div class="skill">
+            <span>CSS</span>
+            <div class="skill-bar">
+                <div class="skill-progress" style="width: 85%"></div>
+            </div>
+        </div>
 
-<div class="skill">
-    <span>Python</span>
-    <div class="skill-bar">
-    <div class="skill-progress" style="width: 80%"></div>
-    </div>
-</div>
+        <div class="skill">
+            <span>JavaScript</span>
+            <div class="skill-bar">
+                <div class="skill-progress" style="width: 75%"></div>
+            </div>
+        </div>
 
-<div class="skill">
-    <span>Object Oriented Programming in Java</span>
-    <div class="skill-bar">
-    <div class="skill-progress" style="width: 80%"></div>
-    </div>
-</div>
+        <div class="skill">
+            <span>Python</span>
+            <div class="skill-bar">
+                <div class="skill-progress" style="width: 80%"></div>
+            </div>
+        </div>
 
-<div class="skill">
-    <span>React</span>
-    <div class="skill-bar">
-    <div class="skill-progress" style="width: 70%"></div>
-    </div>
-</div>
+        <div class="skill">
+            <span>Object Oriented Programming in Java</span>
+            <div class="skill-bar">
+                <div class="skill-progress" style="width: 80%"></div>
+            </div>
+        </div>
 
-<!-- Core Concepts -->
-<h3 style="margin-top: 2rem; color: #00ffe7; text-shadow: 0 0 6px #00ffe7;">Core Concepts</h3>
-<ul style="list-style: none; padding: 0; margin: 1rem 0 0 0;">
-    <li style="margin-bottom: 0.5rem;"><i class="fas fa-check-circle" style="color: #00ffe7; margin-right: 8px;"></i>Data Structures and Algorithms</li>
-    <li style="margin-bottom: 0.5rem;"><i class="fas fa-check-circle" style="color: #00ffe7; margin-right: 8px;"></i>Operating Systems</li>
-    <li><i class="fas fa-check-circle" style="color: #00ffe7; margin-right: 8px;"></i>Computer Networks</li>
-</ul>
-</section>
+        <div class="skill">
+            <span>React</span>
+            <div class="skill-bar">
+                <div class="skill-progress" style="width: 70%"></div>
+            </div>
+        </div>
+
+        <h3 style="margin-top: 2rem; color: #00ffe7; text-shadow: 0 0 6px #00ffe7;">Core Concepts</h3>
+        <ul style="list-style: none; padding: 0; margin: 1rem 0 0 0;">
+            <li style="margin-bottom: 0.5rem;"><i class="fas fa-check-circle" style="color: #00ffe7; margin-right: 8px;"></i>Data Structures and Algorithms</li>
+            <li style="margin-bottom: 0.5rem;"><i class="fas fa-check-circle" style="color: #00ffe7; margin-right: 8px;"></i>Operating Systems</li>
+            <li><i class="fas fa-check-circle" style="color: #00ffe7; margin-right: 8px;"></i>Computer Networks</li>
+        </ul>
+    </section>
 
     <section id="projects">
-        <h2>Projects</h2>
-        <div class="project">
-            <h3>Project</h3>
-            <p>Under-processing</p>
-        </div>
-    </section>
+    <h2>Projects</h2>
+
+    <div class="project">
+        <h3><a href="https://github.com/nikhil2003-hub/Flight-Reservation-System.git" target="_blank">Flight Reservation System (Java Console Project)</a></h3>
+        <p>Developed a console-based flight reservation system using Java, allowing users to search for flights, book tickets, and manage reservations.</p>
+    </div>
+
+    <div class="project">
+        <h3><a href=" https://github.com/nikhil2003-hub/User-Profiling-and-Segmentation-AIML-Project.git" target="_blank">User-Profiling-and-Segmentation-AIML-Project</a></h3>
+        <p>Implemented a machine learning-based user profiling and segmentation system using clustering algorithms to analyze user behavior and preferences.</p>
+    </div>
+
+    <div class="project">
+        <h3><a href="https://nikhil2003-hub.github.io/https-github.com-nikhil2003-hub-time-table/" target="_blank">Dynamic Timetable Web App</a></h3>
+        <p>Built a dynamic and responsive timetable application using HTML, CSS, and JavaScript that highlights daily classes and fetches topics from course PDFs.</p>
+    </div>
+
+    <div class="project">
+        <h3><a href="https://nikhil2003-hub.github.io/portfolio/" target="_blank">Portfolio Website</a></h3>
+        <p>This portfolio site was built using HTML, CSS, and JavaScript to showcase my education, skills, and projects in a professional format.</p>
+    </div>
+</section>
+
+
     <section id="experience">
         <h2>Experience</h2>
         <ul>
@@ -128,41 +146,25 @@
             <li>
                 <strong>Technical Team Member in Hackops Gitam</strong>
                 <p>Active member of a dedicated cybersecurity team committed to continuous learning, knowledge sharing, and professional growth in the field of Information Security, with a focus on practical skills development, collaboration, and staying updated on emerging threats and technologies.</p>
-                <section id="experience" class="scroll-reveal">
         </ul>
+    </section>
 
     <section id="certifications">
         <h2>Certifications</h2>
         <ul>
-            <li>
-                <strong>Crash course on python</strong> –
-                <a href="https://www.coursera.org/account/accomplishments/verify/RZLJETJH1FRM?utm_source%3Dandroid%26utm_medium%3Dcertificate%26utm_content%3Dcert_image%26utm_campaign%3Dsharing_cta%26utm_product%3Dcourse" target="_blank">View Certificate</a>
-            </li>
-            <li>
-                <strong>Python programming fundamentals</strong> –
-                <a href="https://www.coursera.org/account/accomplishments/verify/65OLKDSDK3EP?utm_source%3Dandroid%26utm_medium%3Dcertificate%26utm_content%3Dcert_image%26utm_campaign%3Dsharing_cta%26utm_product%3Dcourse" target="_blank">View Certificate</a>
-            </li>
-            <li>
-                <strong>Introduction to Networking</strong> –
-                <a href="https://www.coursera.org/account/accomplishments/verify/594IQEWL1B4N?utm_source%3Dandroid%26utm_medium%3Dcertificate%26utm_content%3Dcert_image%26utm_campaign%3Dsharing_cta%26utm_product%3Dcourse" target="_blank">View Certificate</a>
-            </li>
-            <li>
-                <strong>Introduction to Generative AI</strong> –
-                <a href="https://www.coursera.org/account/accomplishments/verify/CB43G78WGC2Q?utm_source%3Dandroid%26utm_medium%3Dcertificate%26utm_content%3Dcert_image%26utm_campaign%3Dsharing_cta%26utm_product%3Dcourse" target="_blank">View Certificate</a>
-            </li>
-            <li>
-                <strong>Foundation to Cybersecurity</strong> –
-                <a href="https://www.coursera.org/account/accomplishments/verify/JEAU12UJWA1M?utm_source%3Dandroid%26utm_medium%3Dcertificate%26utm_content%3Dcert_image%26utm_campaign%3Dsharing_cta%26utm_product%3Dcourse" target="_blank">View Certificate</a>
-            </li>
-            <li>
-                <strong>Play it safe: Manage security risks</strong> –
-                <a href="https://www.coursera.org/account/accomplishments/verify/0NGFXGZGXWLR?utm_source%3Dandroid%26utm_medium%3Dcertificate%26utm_content%3Dcert_image%26utm_campaign%3Dsharing_cta%26utm_product%3Dcourse" target="_blank">View Certificate</a>
-            </li>
-            <li>
-                <strong>Connect and protect: Networks and Network Security</strong> –
-                <a href="https://www.coursera.org/account/accomplishments/verify/M4QE1HBZOGJO?utm_source%3Dandroid%26utm_medium%3Dcertificate%26utm_content%3Dcert_image%26utm_campaign%3Dsharing_cta%26utm_product%3Dcourse" target="_blank">View Certificate</a>
-            </li>
+            <li><strong>Crash course on python</strong> – <a href="https://www.coursera.org/account/accomplishments/verify/RZLJETJH1FRM" target="_blank">View Certificate</a></li>
+            <li><strong>Python programming fundamentals</strong> – <a href="https://www.coursera.org/account/accomplishments/verify/65OLKDSDK3EP" target="_blank">View Certificate</a></li>
+            <li><strong>Introduction to Networking</strong> – <a href="https://www.coursera.org/account/accomplishments/verify/594IQEWL1B4N" target="_blank">View Certificate</a></li>
+            <li><strong>Introduction to Generative AI</strong> – <a href="https://www.coursera.org/account/accomplishments/verify/CB43G78WGC2Q" target="_blank">View Certificate</a></li>
+            <li><strong>Foundation to Cybersecurity</strong> – <a href="https://www.coursera.org/account/accomplishments/verify/JEAU12UJWA1M" target="_blank">View Certificate</a></li>
+            <li><strong>Play it safe: Manage security risks</strong> – <a href="https://www.coursera.org/account/accomplishments/verify/0NGFXGZGXWLR" target="_blank">View Certificate</a></li>
+            <li><strong>Connect and protect: Networks and Network Security</strong> – <a href="https://www.coursera.org/account/accomplishments/verify/M4QE1HBZOGJO" target="_blank">View Certificate</a></li>
         </ul>
+    </section>
+
+    <section id="resume">
+        <h2>Resume</h2>
+        <p>My Resume <a href="file:///C:/Users/dbnai/Downloads/Konidala%20Nikhilesh%20Resume%20CV%20(1).pdf" target="_blank">here</a>.</p>
     </section>
 
     <section id="contact">
@@ -172,9 +174,7 @@
         <p><i class="fas fa-map-marker-alt"></i> <strong>Location:</strong> Hyderabad, Telangana, India</p>
         <p>
             <strong>Links:</strong><br>
-            <a href="https://linkedin.com/in/nikhilesh-konidala" target="_blank">
-                <i class="fab fa-linkedin"></i> LinkedIn</a>
-                <br>
+            <a href="https://linkedin.com/in/nikhilesh-konidala" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a><br>
             <a href="https://github.com/nikhil2003-hub" target="_blank"><i class="fab fa-github"></i> GitHub</a>
         </p>
     </section>
